Bug 289072 - prompt for wireless password spams user
Summary: prompt for wireless password spams user
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Lamarque V. Souza
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-15 20:55 UTC by illumilore
Modified: 2011-12-16 00:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0_rc4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description illumilore 2011-12-15 20:55:49 UTC
Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

I turned my laptop on and then went afk for a day or so, and then when I came back, there were almost 50 windows open prompting for the password for a wireless network. There should only be one.

Reproducible: Always

Steps to Reproduce:
na

Actual Results:  
na

Expected Results:  
na

na
Comment 1 Lamarque V. Souza 2011-12-16 00:39:15 UTC
Git commit 390702651406a1ce9ab91ba78ede9644171c20e6 by Lamarque V. Souza.
Committed on 16/12/2011 at 00:01.
Pushed by lvsouza into branch 'master'.

Ask for secrets only once per connection.

BUG: 289072
FIXED-IN: 0.9.0_rc4

M  +13   -1    libs/service/secretstorage.cpp
M  +0    -2    libs/service/secretstorage.h
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/390702651406a1ce9ab91ba78ede9644171c20e6
Comment 2 Lamarque V. Souza 2011-12-16 00:46:55 UTC
Git commit d1741d845b1bb05758946992031b04d1c6c0a050 by Lamarque V. Souza.
Committed on 16/12/2011 at 00:01.
Pushed by lvsouza into branch 'nm09'.

Ask for secrets only once per connection.

BUG: 289072
FIXED-IN: 0.9.0_rc4

M  +13   -1    libs/service/secretstorage.cpp
M  +0    -2    libs/service/secretstorage.h
M  +1    -1    plasma_nm_version.h

http://commits.kde.org/networkmanagement/d1741d845b1bb05758946992031b04d1c6c0a050