Ask for secrets only once per connection.

BUG: 289072
FIXED-IN: 0.9.0_rc4